# gameboy-llvm-tests

./: build.sh  callconv.c  dmglib.inc  game.c  gb.c  gb.h  load.c  load_sdcc.c  make_rom.sh  math.c  test.c  test.s old  test_avr  view.sh
callconv/: callconv.bc  callconv.ll  callconv.s
load/: load.bc  load.ll  load.s
load_sdcc/: load_sdcc.bc  load_sdcc.ll  load_sdcc.s
main/: main.bc  main.ll  main.s
math/: math.bc  math.ll  math.s
project/: CMakeLists.txt
project/include/: gblib.h
project/src/: CMakeLists.txt  gblib.c  main.c
rgbasm/alpha/: hello-world.gb  hello-world.s
rust/test_app/: Cargo.toml
test/: test.asm  test.bc  test.gb  test.ll
